objects/Order__x.object
<CustomObject>
    <fields>
        <fullName>Restocking_Fees_c__c</fullName>
        <externalDeveloperName>Restocking_Fees__c</externalDeveloperName>
        <label>Restocking Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Quantity_c__c</fullName>
        <externalDeveloperName>Return_Quantity__c</externalDeveloperName>
        <label>Return Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Shipping_Tax_c__c</fullName>
        <externalDeveloperName>Return_Shipping_Tax__c</externalDeveloperName>
        <label>Return Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHIPPING_from_cart_c__c</fullName>
        <externalDeveloperName>SHIPPING_from_cart__c</externalDeveloperName>
        <label>SHIPPING from cart</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesChannelId__c</fullName>
        <externalDeveloperName>SalesChannelId</externalDeveloperName>
        <label>Sales Channel ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesStoreId__c</fullName>
        <externalDeveloperName>SalesStoreId</externalDeveloperName>
        <label>Sales Store ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendToHelmsLead__c</fullName>
        <label>SendToHelmsLead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Customer_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Send_Email_To_Customer__c</externalDeveloperName>
        <label>Send Email To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipToContactId__c</fullName>
        <externalDeveloperName>ShipToContactId</externalDeveloperName>
        <label>Ship To Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Type_c__c</fullName>
        <externalDeveloperName>Ship_To_Address_Type__c</externalDeveloperName>
        <label>Ship To Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>C</fullName>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Residential</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipped_Date_c__c</fullName>
        <externalDeveloperName>Shipped_Date__c</externalDeveloperName>
        <label>Shipped Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_c__c</fullName>
        <externalDeveloperName>Shipped_Quantity__c</externalDeveloperName>
        <label>Shipped Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <externalDeveloperName>ShippingAddress</externalDeveloperName>
        <label>Shipping Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <externalDeveloperName>ShippingCity</externalDeveloperName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <externalDeveloperName>ShippingCountry</externalDeveloperName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>ShippingGeocodeAccuracy</externalDeveloperName>
        <label>Shipping Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                    <label>Near Address</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                    <label>Extended Zip</label>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingLatitude__c</fullName>
        <externalDeveloperName>ShippingLatitude</externalDeveloperName>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingLongitude__c</fullName>
        <externalDeveloperName>ShippingLongitude</externalDeveloperName>
        <label>Shipping Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingNumber_c__c</fullName>
        <externalDeveloperName>ShippingNumber__c</externalDeveloperName>
        <label>ShippingNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPhoneNumber_c__c</fullName>
        <externalDeveloperName>ShippingPhoneNumber__c</externalDeveloperName>
        <label>Shipping Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <externalDeveloperName>ShippingPostalCode</externalDeveloperName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <externalDeveloperName>ShippingState</externalDeveloperName>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <externalDeveloperName>ShippingStreet</externalDeveloperName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Customer_Name_c__c</fullName>
        <externalDeveloperName>Shipping_Customer_Name__c</externalDeveloperName>
        <label>Shipping Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Note_c__c</fullName>
        <externalDeveloperName>Shipping_Note__c</externalDeveloperName>
        <label>Shipping Note</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Refund_c__c</fullName>
        <externalDeveloperName>Shipping_Refund__c</externalDeveloperName>
        <label>Delta Return Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Vendors_c__c</fullName>
        <externalDeveloperName>Shipping_Vendors__c</externalDeveloperName>
        <label>Shipping Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowShippingInfo_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ShowShippingInfo__c</externalDeveloperName>
        <label>ShowShippingInfo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <externalDeveloperName>StatusCode</externalDeveloperName>
        <label>Status Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>ORDER COMPLETE - PICKED UP</fullName>
                </value>
                <value>
                    <fullName>ORDER COMPLETE - SHIPPED</fullName>
                </value>
                <value>
                    <fullName>PARTIAL SHIP</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER CANCELED</fullName>
                </value>
                <value>
                    <fullName>ORDER RETURN</fullName>
                </value>
                <value>
                    <fullName>READY FOR PICKUP</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>DEALER REJECTED</fullName>
                </value>
                <value>
                    <fullName>SYSTEM CANCELED</fullName>
                </value>
                <value>
                    <fullName>DEALER CANCELED</fullName>
                </value>
                <value>
                    <fullName>PARTIAL RETURN</fullName>
                </value>
                <value>
                    <fullName>PAYMENT ISSUE</fullName>
                </value>
                <value>
                    <fullName>ORDER ISSUE</fullName>
                </value>
                <value>
                    <fullName>PARTIAL RETURN COMPLETE</fullName>
                </value>
                <value>
                    <fullName>ORDER COMPLETE - INSTALLED</fullName>
                </value>
                <value>
                    <fullName>PROCESSING IN WAREHOUSE</fullName>
                </value>
                <value>
                    <fullName>PREPARING FOR SHIPMENT</fullName>
                </value>
                <value>
                    <fullName>PARTIALLY SHIPPED</fullName>
                </value>
                <value>
                    <fullName>SENT TO WAREHOUSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TAX_from_cart_c__c</fullName>
        <externalDeveloperName>TAX_from_cart__c</externalDeveloperName>
        <label>Total Original Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTAL_from_cart_c__c</fullName>
        <externalDeveloperName>TOTAL_from_cart__c</externalDeveloperName>
        <label>Total Original With Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxLocaleType__c</fullName>
        <externalDeveloperName>TaxLocaleType</externalDeveloperName>
        <label>Tax Locale Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Refund_c__c</fullName>
        <externalDeveloperName>Tax_Refund__c</externalDeveloperName>
        <label>Tax Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjDeliveryAmtWithTax__c</fullName>
        <externalDeveloperName>TotalAdjDeliveryAmtWithTax</externalDeveloperName>
        <label>Total Adjusted Delivery Amount with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjProductAmtWithTax__c</fullName>
        <externalDeveloperName>TotalAdjProductAmtWithTax</externalDeveloperName>
        <label>Total Adjusted Product Amount with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustedDeliveryAmount__c</fullName>
        <externalDeveloperName>TotalAdjustedDeliveryAmount</externalDeveloperName>
        <label>Total Adjusted Delivery Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustedDeliveryTaxAmount__c</fullName>
        <externalDeveloperName>TotalAdjustedDeliveryTaxAmount</externalDeveloperName>
        <label>Total Adjusted Delivery Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustedProductAmount__c</fullName>
        <externalDeveloperName>TotalAdjustedProductAmount</externalDeveloperName>
        <label>Total Adjusted Product Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustedProductTaxAmount__c</fullName>
        <externalDeveloperName>TotalAdjustedProductTaxAmount</externalDeveloperName>
        <label>Total Adjusted Product Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <externalDeveloperName>TotalAmount</externalDeveloperName>
        <label>Order Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDeliveryAdjDistAmount__c</fullName>
        <externalDeveloperName>TotalDeliveryAdjDistAmount</externalDeveloperName>
        <label>Total Delivery Distributed Adjustments</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDeliveryAdjDistAmtWithTax__c</fullName>
        <externalDeveloperName>TotalDeliveryAdjDistAmtWithTax</externalDeveloperName>
        <label>Total Delivery Distributed Adjustments w</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDeliveryAdjDistTaxAmount__c</fullName>
        <externalDeveloperName>TotalDeliveryAdjDistTaxAmount</externalDeveloperName>
        <label>Total Delivery Distributed Adjustment Ta</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProductAdjDistAmount__c</fullName>
        <externalDeveloperName>TotalProductAdjDistAmount</externalDeveloperName>
        <label>Total Product Distributed Adjustments</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProductAdjDistAmtWithTax__c</fullName>
        <externalDeveloperName>TotalProductAdjDistAmtWithTax</externalDeveloperName>
        <label>Total Product Distributed Adjustments wi</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProductAdjDistTaxAmount__c</fullName>
        <externalDeveloperName>TotalProductAdjDistTaxAmount</externalDeveloperName>
        <label>Total Product Distributed Adjustment Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <externalDeveloperName>TotalTaxAmount</externalDeveloperName>
        <label>Total Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount_c__c</fullName>
        <externalDeveloperName>TotalTaxAmount__c</externalDeveloperName>
        <label>Total Original Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_c__c</fullName>
        <externalDeveloperName>Total_Amount__c</externalDeveloperName>
        <label>Total Original Pre Tax Order Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Current_Amount__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Current_Amount__c</externalDeveloperName>
        <label>Total Core Charge Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Current_Quantity__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Current_Quantity__c</externalDeveloperName>
        <label>Total Core Charge Current Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Current_Tax__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Current_Tax__c</externalDeveloperName>
        <label>Total Core Charge Current Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Original_Amount__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Original_Amount__c</externalDeveloperName>
        <label>Total Core Charge Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Original_Quantity__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Original_Quantity__c</externalDeveloperName>
        <label>Total Core Charge Original Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Original_Tax__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Original_Tax__c</externalDeveloperName>
        <label>Total Core Charge Original Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Return_Amount__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Return_Amount__c</externalDeveloperName>
        <label>Total Core Charge Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Return_Quantity__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Return_Quantity__c</externalDeveloperName>
        <label>Total Core Charge Return Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Return_Tax__c</fullName>
        <label>Total Core Charge Return Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Core_Charge_Return_Tax_c__c</fullName>
        <externalDeveloperName>Total_Core_Charge_Return_Tax__c</externalDeveloperName>
        <label>Total Core Charge Return Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_Pre_Tax_Order_Amount_c__c</fullName>
        <externalDeveloperName>Total_Current_Pre_Tax_Order_Amount__c</externalDeveloperName>
        <label>Total Current Pre Tax Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_Product_Amount_c__c</fullName>
        <externalDeveloperName>Total_Current_Product_Amount__c</externalDeveloperName>
        <label>Total Current Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Current_Product_Tax__c</externalDeveloperName>
        <label>Total Current Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Installation_Charge_c__c</fullName>
        <externalDeveloperName>Total_Installation_Charge__c</externalDeveloperName>
        <label>Total Original Installation Charge</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Installation_Charges_c__c</fullName>
        <externalDeveloperName>Total_Installation_Charges__c</externalDeveloperName>
        <label>Total Original Installation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Installation_Return_c__c</fullName>
        <externalDeveloperName>Total_Installation_Return__c</externalDeveloperName>
        <label>Total Return Installation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Installation_Tax_c__c</fullName>
        <externalDeveloperName>Total_Installation_Tax__c</externalDeveloperName>
        <label>Total Original Installation Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Item_Return_c__c</fullName>
        <externalDeveloperName>Total_Item_Return__c</externalDeveloperName>
        <label>Total Return Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Original_Product_Amount_c__c</fullName>
        <externalDeveloperName>Total_Original_Product_Amount__c</externalDeveloperName>
        <label>Total Original Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Original_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Original_Product_Tax__c</externalDeveloperName>
        <label>Total Original Product Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Restocking_Fee_Tax_c__c</fullName>
        <externalDeveloperName>Total_Restocking_Fee_Tax__c</externalDeveloperName>
        <label>Total Restocking Fee Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Restocking_Fees_c__c</fullName>
        <externalDeveloperName>Total_Restocking_Fees__c</externalDeveloperName>
        <label>Total Restocking Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_Amount_c__c</fullName>
        <externalDeveloperName>Total_Return_Amount__c</externalDeveloperName>
        <label>Total Return Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_Installation_Tax_c__c</fullName>
        <externalDeveloperName>Total_Return_Installation_Tax__c</externalDeveloperName>
        <label>Total Return Installation Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_Pre_Tax_Amount_c__c</fullName>
        <externalDeveloperName>Total_Return_Pre_Tax_Amount__c</externalDeveloperName>
        <label>Total Return Pre Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_Product_Amount_c__c</fullName>
        <externalDeveloperName>Total_Return_Product_Amount__c</externalDeveloperName>
        <label>Total Return Product Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Return_Product_Tax__c</externalDeveloperName>
        <label>Total Return Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_c__c</fullName>
        <externalDeveloperName>Total_Return__c</externalDeveloperName>
        <label>Total Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Ship_Return_c__c</fullName>
        <externalDeveloperName>Total_Ship_Return__c</externalDeveloperName>
        <label>Return Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Shipping_Tax_c__c</fullName>
        <externalDeveloperName>Total_Shipping_Tax__c</externalDeveloperName>
        <label>Original Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Return_c__c</fullName>
        <externalDeveloperName>Total_Tax_Return__c</externalDeveloperName>
        <label>Total Return Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_AMT_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_AMT__c</externalDeveloperName>
        <label>Total Unavailable AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_PreTaxAmt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_PreTaxAmt__c</externalDeveloperName>
        <label>Total Unavailable PreTax Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ProductAmt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ProductAmt__c</externalDeveloperName>
        <label>Total Unavailable Product Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ProductTax_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ProductTax__c</externalDeveloperName>
        <label>Total Unavailable Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ShippingAmt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ShippingAmt__c</externalDeveloperName>
        <label>Total Unavailable Shipping Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ShippingTax_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ShippingTax__c</externalDeveloperName>
        <label>Total Unavailable Refund Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_TaxAmt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_TaxAmt__c</externalDeveloperName>
        <label>Total Unavailable Tax AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DirectShip</fullName>
                    <label>Direct Ship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unavailable_Quantity_c__c</fullName>
        <externalDeveloperName>Unavailable_Quantity__c</externalDeveloperName>
        <label>Unavailable Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_Installation_Price_c__c</fullName>
        <externalDeveloperName>Updated_Installation_Price__c</externalDeveloperName>
        <label>Current Installation Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Order_Amount_c__c</fullName>
        <externalDeveloperName>Updated_Order_Amount__c</externalDeveloperName>
        <label>Total Current Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Order_Total_c__c</fullName>
        <externalDeveloperName>Updated_Order_Total__c</externalDeveloperName>
        <label>Total Current with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Shipping_c__c</fullName>
        <externalDeveloperName>Updated_Shipping__c</externalDeveloperName>
        <label>Current Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Total_Tax_c__c</fullName>
        <externalDeveloperName>Updated_Total_Tax__c</externalDeveloperName>
        <label>Total Current Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertex_Trans_Id_c__c</fullName>
        <externalDeveloperName>Vertex_Trans_Id__c</externalDeveloperName>
        <label>Vertex Trans Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cart_c__c</fullName>
        <externalDeveloperName>cart__c</externalDeveloperName>
        <label>cart</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customOrderDate_c__c</fullName>
        <externalDeveloperName>customOrderDate__c</externalDeveloperName>
        <label>customOrderDate</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isOrderPickedUp_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isOrderPickedUp__c</externalDeveloperName>
        <label>isOrderPickedUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStatusDraft_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isStatusDraft__c</externalDeveloperName>
        <label>isStatusDraft</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <label>Order Ext</label>
    <pluralLabel>Orders</pluralLabel>
</CustomObject>